SFUSA/force-app/main/default/objects/Audit_Log__c/fields/New_Total_Value__c.field-meta.xml
<CustomField>
        <fullName>New_Total_Value__c</fullName>
        <description>Field to be used to calculate the new total value of the Marketing Plan or Campaign</description>
        <label>New Total Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>