SFUSA/force-app/main/default/objects/Audit_Log__c/fields/Old_Total_Value__c.field-meta.xml
<CustomField>
        <fullName>Old_Total_Value__c</fullName>
        <label>Old Total Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>