SFUSA/force-app/main/default/objects/Audit_Log__c/fields/Reason_for_Adjustment__c.field-meta.xml
<CustomField>
        <fullName>Reason_for_Adjustment__c</fullName>
        <label>Reason for Adjustment</label>
        <type>TextArea</type>
    </CustomField>