SFUSA/force-app/main/default/objects/Audit_Log__c/fields/Related_Marketing_Plan__c.field-meta.xml
<CustomField>
        <fullName>Related_Marketing_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Marketing Plan of the adjustment</description>
        <label>Related Marketing Plan</label>
        <referenceTo>MarketingPlan__c</referenceTo>
        <relationshipLabel>Audit Logs</relationshipLabel>
        <relationshipName>Audit_Logs</relationshipName>
        <type>Lookup</type>
    </CustomField>